unpackaged/main/default/objects/csmrgp__Duplicate_Case__c/fields/csmrgp__Case_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Case_Created_Date__c</fullName>
    <description>Created Date of the associated Case</description>
    <label>Case Created Date</label>
    <type>DateTime</type>
</CustomField>