unpackaged/main/default/objects/csmrgp__Duplicate_Case__c/fields/csmrgp__Duplicate_Group__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Duplicate_Group__c</fullName>
    <label>Duplicate Group</label>
    <referenceTo>csmrgp__Duplicate_Group__c</referenceTo>
    <relationshipLabel>Duplicate Cases</relationshipLabel>
    <relationshipName>Duplicate_Cases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>