unpackaged/main/default/objects/csmrgp__Duplicate_Case__c/fields/csmrgp__Has_Parent__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Has_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the associated Case has a Parent Case</description>
    <label>Has Parent</label>
    <type>Checkbox</type>
</CustomField>