unpackaged/main/default/objects/csmrgp__Duplicate_Case__c/fields/csmrgp__Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>